--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -6,7 +6,8 @@
     top: 0;
     min-height: 100%;
     transition: all 0.5s ease;
-    background: #FEFFED;
+    // background: #FEFFED;
+    background: white;
     padding: 3rem;
 }
 
