--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+html {
+    min-height: 100%;
+}
+
 body {
     position: relative;
     font-family: 'Roboto', sans-serif;
@@ -32,5 +36,4 @@ body {
         padding: 1rem 1.5rem;
     }
 }
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
+
