--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,9 +36,9 @@
                         (change)="onInventoryTypeChange(inventoryType)">
                         <option value="mouse">Mouse</option>
                         <option value="keyboard">Keyboard</option>
-                        <option value="headset">Headset</option>
+                        <option value="laptop">Laptop</option>
                         <option value="monitor">Monitor</option>
-                        <option value="speaker">Speaker</option>
+                        <option value="printer">Printer</option>
                     </select>
                 </div>
                 <div class="row mb-4 d-flex align-items-center justify-content-around">
