--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-4 bg-dark rounded-3 min-vh-100">
     <div class="header">
         <h1 class="fs-4 fw-bold text-warning mb-1">All Items</h1>
-        <p class="text-light fs-6 mb-4">Item detail Information</p>
+        <p class="text-light fs-6 fw-medium mb-4">Detailed information on all items.</p>
     </div>
 
     <div class="d-flex justify-content-between mb-4">
@@ -25,18 +25,21 @@
                                     Selection</label>
                                 <select id="brandSelect" class="form-select" formControlName="brand_name"
                                     *ngIf="inventoriesDropdown$ | async as inventories">
-                                    <option *ngFor="let item of inventories" [value]="item.id">
-                                        {{ item.id }} - {{ item.brand_name }}
+                                    <option value="" disabled selected>Select Brand</option>
+                                    <option *ngFor="let brand of inventories.brand_names" [value]="brand">
+                                        {{ brand }}
                                     </option>
                                 </select>
                             </div>
                             <div class="form-group mb-3">
                                 <label for="typeSelect" class="form-label fw-medium text-secondary">Type
                                     Selection</label>
-                                <select id="typeSelect" class="form-select" formControlName="type">
-                                    <option value="Keyboard">Keyboard</option>
-                                    <option value="Mouse">Mouse</option>
-                                    <option value="Monitor">Monitor</option>
+                                <select id="typeSelect" class="form-select" formControlName="type"
+                                    *ngIf="inventoriesDropdown$ | async as inventories">
+                                    <option value="" disabled selected>Select Type</option>
+                                    <option *ngFor="let type of inventories.types" [value]="type">
+                                        {{ type }}
+                                    </option>
                                 </select>
                             </div>
                             <div class="d-flex justify-content-end gap-2 mt-4 pt-2 border-top">
@@ -104,11 +107,12 @@
                 aria-label="Pagination navigation" class="mb-0">
             </ngb-pagination>
             <div ngbDropdown class="page-size-selector">
+                <label for="dropdownBasic1" class="form-label fw-medium text-light">No. of items per page:</label>
                 <button type="button" class="btn btn-warning" id="dropdownBasic1" ngbDropdownToggle
                     [(ngModel)]="itemsPerPage">
-                    No. of items per page
+                    {{ itemsPerPage }}
                 </button>
-                <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="border-0 dropdown-select">
                     <button *ngFor="let pageSize of [10, 20, 30]" ngbDropdownItem [value]="pageSize"
                         (click)="changeItemsPerPage(pageSize)">
                         {{ pageSize }}
